2005-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer.pm (newCacheFileName): MD5 to generate
	unique file names

2005-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac (also in all plugins): AM_INIT_AUTOMAKE(1.9)
	instead of 1.6. The old version conflicted with plugins.

2005-01-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* doc/Makefile.am: Variable substitution in doc files

	* doc/manpages/Makefile.am: Man sections configurable

	* perllib/Torrus/DevDiscover/CiscoIOS_Docsis.pm:
	New discovery module for Cisco-specific DOCSIS statistics

2005-01-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	Moved the IF-MIB discovery from checkdevtype() to discover()

2005-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AxxessIT.pm: new discovery module

2005-01-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (checkdevtype):
	Interface excluded when ifOperStatus=6 [notPresent]

2004-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in (absXmlFilename): output file is placed in
	siteXmlDir if the path is not absolute. $XMLCONFIG is still
	supported for the sake of compatibility.

2004-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: replaced --disable-modcheck with --enable-pkgonly
	
2004-11-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 0.1.8
	* Started Torrus development

2004-11-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/ConfigTree/Validator.pm:
	New parameters:  'monitor-period', 'monitor-timeoffset'

	* lib/Torrus/Monitor.pm: Now monitor runs under standard Scheduler

2004-10-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/Collector.pm: