@@ -91,8 +91,9 @@ sub checkdevtype
     my $dd = shift;
     my $devdetails = shift;
 
-    if( index( $devdetails->snmpVar( $dd->oiddef('sysObjectID') ),
-               $dd->oiddef('axxEdgeTypes') ) != 0 )
+    if( not $dd->oidBaseMatch
+        ( 'axxEdgeTypes',
+          $devdetails->snmpVar( $dd->oiddef('sysObjectID') ) ) )
     {
         return 0;
     }
