@@ -66,11 +66,11 @@ sub checkdevtype
     my $dd = shift;
     my $devdetails = shift;
 
-    if( index( $devdetails->snmpVar( $dd->oiddef('sysObjectID') ),
-               $dd->oiddef('ucd') ) != 0
+    my $sysObjectID = $devdetails->snmpVar( $dd->oiddef('sysObjectID') );
+    
+    if( not $dd->oidBaseMatch( 'ucd', $sysObjectID )
         and
-        index( $devdetails->snmpVar( $dd->oiddef('sysObjectID') ),
-               $dd->oiddef('net_snmp') ) != 0 )
+        not $dd->oidBaseMatch( 'net_snmp', $sysObjectID ) )
     {
         return 0;
     }
