@@ -1,3 +1,7 @@
+2005-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover.pm (oidBaseMatch): better OID comparison
+
 2005-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Renderer.pm (newCacheFileName): MD5 to generate
